--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="s">
             <h2>How can we help?</h2>
-            <div class="in"><input type="text" placeholder="Search" ><a style="font-size: 2rem;margin: 0 auto;display: block;margin-top: -3rem;margin-left: 28rem;">&#8594;</a></div>
+            <div class="in"><input type="text" placeholder="Search" ><a class="ar">&#8594;</a></div>
             
         </div>
         <div class="c">
