--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="n">
             <div class="left" style="display: flex;gap:1rem;margin-left: 7rem;font-size: 1.3rem;">
                 <img style="height:25px;margin-top:-1px;"src="ab1.png">
-                <a href="#">Abstract<a style="margin-left: -20px;height: 10px;"></a>|</a>
+                <a href="#">Abstract</a>
                 <a href="#" class="h">HelpCenter</a>
             </div>
             <div class="right" style="margin-right: 5rem;">
