--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ your email,profile details, and password.</pre>
                 
                 <h4>Contact Us</h4>
                 <ul>
-                    <li>info@abstract.com</li>
+                    <li class="e">info@abstract.com</li>
                 </ul>
 
             </div>
